--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -117,14 +117,14 @@ body {
     width: 100%;
 }
 
-.recomendados{
+.main{
     background-color: var(--bg-alt);
     padding: 24px;
     border-radius: 16px;
     border: 1px solid var(--card-border-default);
 }
 /* seção recomendados */
-.recomendados .title {
+.main .title {
   font-size: 18px;
   font-weight: 800;         
   margin-bottom: 16px;
@@ -168,7 +168,7 @@ body {
 }
 
 .card-actions .btn {
-  width: 100%;               /* button width 100% */ /* [file:2] */
+  width: 100%;               /* button width 100% */
   font-size: 14px;
   font-weight: 600;
   border-radius: 4px;
