--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -27,6 +27,19 @@ body {
   background-color: var(--bg);
 }
 
+#andistro-warning {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #4873CA;
+  color: #FFFFFF;
+  padding: 8px;
+  font-size: 12px;
+  text-align: center;
+  z-index: 9999;
+}
+
 /* container principal (máx 360px) */
 .app {
   width: 100%;
