--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -20,6 +20,10 @@
   font-family: "Public Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
 
+a{
+  text-decoration: none;
+}
+
 body {
   display: flex;
   justify-content: center;
